Improve coverage, add better support for subtypes